--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Application Météo</h1>
         <input type="text" id="city-input" placeholder="Entrez une ville">
-        <button id="search-button">Rechercher</button>
+        <br><br><button id="search-button">Rechercher</button>
         <div id="weather-result"></div>
     </div>
     <script src="script.js"></script>
