--- a/index.html
+++ b/index.html
@@ -13,6 +13,22 @@
         <br><br><button id="search-button">Rechercher</button>
         <div id="weather-result"></div>
     </div>
+
+    <br><br><h1>Avis</h1>
+    <form action="https://formspree.io/f/xannrora" method="POST">
+        <label for="name">Nom :</label>
+        <input type="text" id="name" name="name" required class="input"> <br><br>
+
+        <label for="email">Email :</label>
+        <input type="email" id="email" name="email" required class="input"> <br><br>
+
+        <label for="comment">Commentaire :</label>
+        <textarea id="comment" name="comment" required class="textarea"></textarea> <br><br>
+
+        <button type="submit">Envoyer</button>
+    </form>
+
+
     <script src="script.js"></script>
 </body>
 </html>
