--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <br><br><h1>Avis</h1>
-    <form action="" method="POST" id="contact-form">
+    <form action="contact-form" method="POST" id="contact-form">
         <label for="name">Nom :</label>
         <input type="text" id="name" name="name" required class="input"> <br><br>
 
