--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <br><br><h1>Avis</h1>
-    <form action="contact-form" method="POST" id="contact-form">
+    <form action="https://formspree.io/f/xannrora" method="POST">
         <label for="name">Nom :</label>
         <input type="text" id="name" name="name" required class="input"> <br><br>
 
@@ -28,10 +28,6 @@
         <button type="submit">Envoyer</button>
     </form>
 
-
-    <script>
-    document.getElementById('contact-form').action = process.env.FORMSPREE_URL;
-    </script>
 
     <script src="script.js"></script>
 </body>
